Add raita recipe and link it to index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 
   <body>
     <h1>Odin Recipes</h1>
+    <a href="./recipes/raita.html" target="_blank" rel="noopener noreferrer">Raita</a>
   </body>
 </html>
