Add recipe info for raita recipe and raita image
Add a description, ingredients list, and steps to make the raita.
Also included an image of the raita.

--- a/recipes/raita.html
+++ b/recipes/raita.html
@@ -8,5 +8,35 @@
 
   <body>
     <h1>Raita</h1>
+    <img src="../img/Raita.jpg" alt="Raita" width="100">
+    <h2>Description</h2>
+    <p>
+      Raita is an Indian yogurt dish that often accompanies other dishes (like Biryani or Aloo Paratha). 
+      It is a healthy and cooling side dish that will surely enhance your meal!
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>1/2 Chopped Cucumber</li>
+      <li>1/2 Chopped Tomato</li>
+      <li>1 Chopped Green Chili</li>
+      <li>1 cup Curd (Dahi / Yogurt)</li>
+      <li>1 teaspoon Cumin seeds (Jeera)</li>
+      <li>1/2 tablespoon Red Chili Powder</li>
+      <li>Salt, to taste</li>
+      <li>Chopped Cilanto (Coriander / Dhania) Leaves</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>
+        First, roast the cumin seeds until fragrant and browned. Once roasted, remove intoa bowl to cool.
+      </li>
+      <li>
+        Then grind the roasted cumin seeds in a mortar with a pestle.
+      </li>
+      <li>
+        Now whisk the yogurt in a bowl and add the chopped cucumbers, tomatoes, chili, roasted cumin powder, chili pwder, salt, and cilantro leaves.
+        Stir well to combine and serve!
+      </li>
+    </ol>
   </body>
 </html>
