--- a/recipes/raita.html
+++ b/recipes/raita.html
@@ -8,7 +8,7 @@
 
   <body>
     <h1>Raita</h1>
-    <img src="../img/Raita.jpg" alt="Raita" width="300">
+    <img src="../img/raita.jpg" alt="Raita" width="300">
     <h2>Description</h2>
     <p>
       Raita is an Indian yogurt dish that often accompanies other dishes (like Biryani or Aloo Paratha). 
