Update links to recipes on index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/raita.html" target="_blank" rel="noopener noreferrer">Raita</a>
+    <a href="./recipes/moong-dal.html" target="_blank" rel="noopener noreferrer">Moong Dal</a>
+    <a href="./recipes/peanut-butter-and-jelly.html" target="_blank" rel="noopener noreferrer">PB&J</a>
   </body>
 </html>
