--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/raita.html" target="_blank" rel="noopener noreferrer">Raita</a>
-    <a href="./recipes/moong-dal.html" target="_blank" rel="noopener noreferrer">Moong Dal</a>
-    <a href="./recipes/peanut-butter-and-jelly.html" target="_blank" rel="noopener noreferrer">PB&J</a>
+    <ul>
+      <li><a href="./recipes/raita.html" target="_blank" rel="noopener noreferrer">Raita</a></li>
+      <li><a href="./recipes/moong-dal.html" target="_blank" rel="noopener noreferrer">Moong Dal</a></li>
+      <li><a href="./recipes/peanut-butter-and-jelly.html" target="_blank" rel="noopener noreferrer">PB&J</a></li>
+    </ul>            
   </body>
 </html>
