--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
   <head>
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="./styles.css">    
   </head>
 
   <body>
     <h1>Odin Recipes</h1>
+    <img src="./img/cooking.gif" alt="Cooking Gone Wrong">
     <ul>
       <li><a href="./recipes/raita.html" target="_blank" rel="noopener noreferrer">Raita</a></li>
       <li><a href="./recipes/moong-dal.html" target="_blank" rel="noopener noreferrer">Moong Dal</a></li>
